Copied existing CORS middleware from pdm-server
project. Removed path exclusions (were only intended
to be temporary until we could identify cause of issue.
Added in extern crate definitions (in pdm server all
were defined in lib.rs not in the cors_middleware.rs
file) and specified known working versions of libaries
in the cargo.toml.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Andy Bell <andy.bell.github@gmail.com>"]
 
 [dependencies]
+futures = "0.1"
+gotham = "0.2"
+gotham_derive = "0.2"
+hyper = "0.11"
+unicase = "2.1"
