WIP still failing to compile but its late.
Needs gotham cloned to ../gotham so I can
build against 0.3.0-dev for gotham/gotham
derive.

Currently on 16 errors, mainly stemming
from the changes from Hyper -> http crates
for the handling of many of the used values
and it appears headers build differently
now? Will need further investigation, and
perhaps checking how gotham 0.3 deals with
setting headers as custom responses have
changed?

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 futures = "0.1"
-gotham = "0.2"
-gotham_derive = "0.2"
-hyper = "0.11"
+gotham = { path = "../gotham/gotham" }
+gotham_derive = { path = "../gotham/gotham_derive" }
+http = "0.1"
+hyper = "0.12"
 unicase = "2.1"
 
 [dev-dependencies]
